Compilation/Toy-base-Td07-ZHAO-YUQIAO/src/syntax.output
State 100 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: var_decl ';'
    5            | func_decl

    6 stmt: ';'
    7     | expr ';'
    8     | KPRINT '(' eparam_list ')' ';'
    9     | '{' stmt_list '}'
   10     | KWHILE '(' expr ')' stmt
   11     | KFOR '(' for1 ';' for2 ';' for3 ')' stmt
   12     | KRETURN expr_opt ';'
   13     | KBREAK ';'
   14     | KTHROW ';'
   15     | KIF '(' expr ')' stmt
   16     | KIF '(' expr ')' stmt KELSE stmt
   17     | KSWITCH '{' cond_list defcond '}'
   18     | KTRY stmt catch_opt finally_opt
   19     | var_decl ';'
   20     | prototype ';'
   21     | error ';'

   22 cond_list: cond_list KCASE expr ':' stmt
   23          | /* empty */

   24 defcond: KDEFAULT ':' stmt
   25        | /* empty */

   26 catch_opt: KCATCH stmt
   27          | /* empty */

   28 finally_opt: KFINALLY stmt
   29            | /* empty */

   30 stmt_list: stmt_list stmt
   31          | /* empty */

   32 var_decl: var_decl ',' var init_var
   33         | type var init_var

   34 init_var: '=' expr
   35         | /* empty */

   36 type: TINT
   37     | TFLOAT
   38     | TBOOL
   39     | TSTRING
   40     | TVOID

   41 func_decl: prototype ';'
   42          | prototype '{' stmt_list '}'

   43 prototype: type var '(' fparam_list ')'

   44 fparam_list: fparam_list ',' type var
   45            | type var
   46            | /* empty */

   47 eparam_list: eparam_list ',' expr
   48            | expr
   49            | /* empty */

   50 expr: INTEGER
   51     | FLOAT
   52     | BOOLEAN
   53     | STRING
   54     | var
   55     | call
   56     | var '=' expr
   57     | '-' expr
   58     | '+' expr
   59     | expr '+' expr
   60     | expr '-' expr
   61     | expr '*' expr
   62     | expr '/' expr
   63     | expr '%' expr
   64     | expr POW expr
   65     | expr '<' expr
   66     | expr '>' expr
   67     | expr EQ expr
   68     | expr GE expr
   69     | expr LE expr
   70     | expr NE expr
   71     | expr KOR expr
   72     | expr KAND expr
   73     | KNOT expr
   74     | '(' expr ')'
   75     | expr '?' expr ':' expr
   76     | PP var
   77     | MM var
   78     | var PP
   79     | var MM
   80     | expr PE expr
   81     | expr ME expr
   82     | expr MTE expr
   83     | expr DE expr

   84 for1: var_decl
   85     | expr
   86     | /* empty */

   87 for2: expr_opt

   88 for3: expr_opt

   89 expr_opt: expr
   90         | /* empty */

   91 var: IDENTIFIER

   92 call: var '(' eparam_list ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 63
'(' (40) 8 10 11 15 16 43 74 92
')' (41) 8 10 11 15 16 43 74 92
'*' (42) 61
'+' (43) 58 59
',' (44) 32 44 47
'-' (45) 57 60
'/' (47) 62
':' (58) 22 24 75
';' (59) 4 6 7 8 11 12 13 14 19 20 21 41
'<' (60) 65
'=' (61) 34 56
'>' (62) 66
'?' (63) 75
'{' (123) 9 17 42
'}' (125) 9 17 42
error (256) 21
INTEGER (258) 50
BOOLEAN (259) 52
FLOAT (260) 51
STRING (261) 53
IDENTIFIER (262) 91
KWHILE (263) 10
KIF (264) 15 16
KPRINT (265) 8
KRETURN (266) 12
KBREAK (267) 13
KFOR (268) 11
KSWITCH (269) 17
KCASE (270) 22
KDEFAULT (271) 24
KTRY (272) 18
KCATCH (273) 26
KFINALLY (274) 28
KTHROW (275) 14
TINT (276) 36
TFLOAT (277) 37
TBOOL (278) 38
TSTRING (279) 39
TVOID (280) 40
IFX (281)
KELSE (282) 16
DE (283) 83
MTE (284) 82
ME (285) 81
PE (286) 80
KOR (287) 71
KAND (288) 72
LE (289) 69
GE (290) 68
NE (291) 70
EQ (292) 67
UMINUS (293)
KNOT (294) 73
MM (295) 77 79
PP (296) 76 78
POW (297) 64


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
declarations (61)
    on left: 2 3, on right: 1 2
declaration (62)
    on left: 4 5, on right: 2 3
stmt (63)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    on right: 10 11 15 16 18 22 24 26 28 30
cond_list (64)
    on left: 22 23, on right: 17 22
defcond (65)
    on left: 24 25, on right: 17
catch_opt (66)
    on left: 26 27, on right: 18
finally_opt (67)
    on left: 28 29, on right: 18
stmt_list (68)
    on left: 30 31, on right: 9 30 42
var_decl (69)
    on left: 32 33, on right: 4 19 32 84
init_var (70)
    on left: 34 35, on right: 32 33
type (71)
    on left: 36 37 38 39 40, on right: 33 43 44 45
func_decl (72)
    on left: 41 42, on right: 5
prototype (73)
    on left: 43, on right: 20 41 42
fparam_list (74)
    on left: 44 45 46, on right: 43 44
eparam_list (75)
    on left: 47 48 49, on right: 8 47 92
expr (76)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83,
    on right: 7 10 15 16 22 34 47 48 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 80 81 82 83 85 89
for1 (77)
    on left: 84 85 86, on right: 11
for2 (78)
    on left: 87, on right: 11
for3 (79)
    on left: 88, on right: 11
expr_opt (80)
    on left: 89 90, on right: 12 87 88
var (81)
    on left: 91, on right: 32 33 43 44 45 54 56 76 77 78 79 92
call (82)
    on left: 92, on right: 55


state 0

    0 $accept: . program $end
    1 program: . declarations
    2 declarations: . declarations declaration
    3             | . declaration
    4 declaration: . var_decl ';'
    5            | . func_decl
   32 var_decl: . var_decl ',' var init_var
   33         | . type var init_var
   36 type: . TINT
   37     | . TFLOAT
   38     | . TBOOL
   39     | . TSTRING
   40     | . TVOID
   41 func_decl: . prototype ';'
   42          | . prototype '{' stmt_list '}'
   43 prototype: . type var '(' fparam_list ')'

    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TBOOL    shift, and go to state 3
    TSTRING  shift, and go to state 4
    TVOID    shift, and go to state 5

    program       go to state 6
    declarations  go to state 7
    declaration   go to state 8
    var_decl      go to state 9
    type          go to state 10
    func_decl     go to state 11
    prototype     go to state 12


state 1

   36 type: TINT .

    $default  reduce using rule 36 (type)


state 2

   37 type: TFLOAT .

    $default  reduce using rule 37 (type)


state 3

   38 type: TBOOL .

    $default  reduce using rule 38 (type)


state 4

   39 type: TSTRING .

    $default  reduce using rule 39 (type)


state 5

   40 type: TVOID .

    $default  reduce using rule 40 (type)


state 6

    0 $accept: program . $end

    $end  shift, and go to state 13


state 7

    1 program: declarations .  [$end]
    2 declarations: declarations . declaration
    4 declaration: . var_decl ';'
    5            | . func_decl
   32 var_decl: . var_decl ',' var init_var
   33         | . type var init_var
   36 type: . TINT
   37     | . TFLOAT
   38     | . TBOOL
   39     | . TSTRING
   40     | . TVOID
   41 func_decl: . prototype ';'
   42          | . prototype '{' stmt_list '}'
   43 prototype: . type var '(' fparam_list ')'

    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TBOOL    shift, and go to state 3
    TSTRING  shift, and go to state 4
    TVOID    shift, and go to state 5

    $default  reduce using rule 1 (program)

    declaration  go to state 14
    var_decl     go to state 9
    type         go to state 10
    func_decl    go to state 11
    prototype    go to state 12


state 8

    3 declarations: declaration .

    $default  reduce using rule 3 (declarations)


state 9

    4 declaration: var_decl . ';'
   32 var_decl: var_decl . ',' var init_var

    ';'  shift, and go to state 15
    ','  shift, and go to state 16


state 10

   33 var_decl: type . var init_var
   43 prototype: type . var '(' fparam_list ')'
   91 var: . IDENTIFIER

    IDENTIFIER  shift, and go to state 17

    var  go to state 18


state 11

    5 declaration: func_decl .

    $default  reduce using rule 5 (declaration)


state 12

   41 func_decl: prototype . ';'
   42          | prototype . '{' stmt_list '}'

    ';'  shift, and go to state 19
    '{'  shift, and go to state 20


state 13

    0 $accept: program $end .

    $default  accept


state 14

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


state 15

    4 declaration: var_decl ';' .

    $default  reduce using rule 4 (declaration)


state 16

   32 var_decl: var_decl ',' . var init_var
   91 var: . IDENTIFIER

    IDENTIFIER  shift, and go to state 17

    var  go to state 21


state 17

   91 var: IDENTIFIER .

    $default  reduce using rule 91 (var)


state 18

   33 var_decl: type var . init_var
   34 init_var: . '=' expr
   35         | .  [';', ',']
   43 prototype: type var . '(' fparam_list ')'

    '='  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 35 (init_var)

    init_var  go to state 24


state 19

   41 func_decl: prototype ';' .

    $default  reduce using rule 41 (func_decl)


state 20

   30 stmt_list: . stmt_list stmt
   31          | .
   42 func_decl: prototype '{' . stmt_list '}'

    $default  reduce using rule 31 (stmt_list)

    stmt_list  go to state 25


state 21

   32 var_decl: var_decl ',' var . init_var
   34 init_var: . '=' expr
   35         | .  [';', ',']

    '='  shift, and go to state 22

    $default  reduce using rule 35 (init_var)

    init_var  go to state 26


state 22

   34 init_var: '=' . expr
   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   58     | . '+' expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   74     | . '(' expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    '('         shift, and go to state 36

    expr  go to state 37
    var   go to state 38
    call  go to state 39


state 23

   36 type: . TINT
   37     | . TFLOAT
   38     | . TBOOL
   39     | . TSTRING
   40     | . TVOID
   43 prototype: type var '(' . fparam_list ')'
   44 fparam_list: . fparam_list ',' type var
   45            | . type var
   46            | .  [')', ',']

    TINT     shift, and go to state 1
    TFLOAT   shift, and go to state 2
    TBOOL    shift, and go to state 3
    TSTRING  shift, and go to state 4
    TVOID    shift, and go to state 5

    $default  reduce using rule 46 (fparam_list)

    type         go to state 40
    fparam_list  go to state 41


state 24

   33 var_decl: type var init_var .

    $default  reduce using rule 33 (var_decl)


state 25

    6 stmt: . ';'
    7     | . expr ';'
    8     | . KPRINT '(' eparam_list ')' ';'
    9     | . '{' stmt_list '}'
   10     | . KWHILE '(' expr ')' stmt
   11     | . KFOR '(' for1 ';' for2 ';' for3 ')' stmt
   12     | . KRETURN expr_opt ';'
   13     | . KBREAK ';'
   14     | . KTHROW ';'
   15     | . KIF '(' expr ')' stmt
   16     | . KIF '(' expr ')' stmt KELSE stmt
   17     | . KSWITCH '{' cond_list defcond '}'
   18     | . KTRY stmt catch_opt finally_opt
   19     | . var_decl ';'
   20     | . prototype ';'
   21     | . error ';'
   30 stmt_list: stmt_list . stmt
   32 var_decl: . var_decl ',' var init_var
   33         | . type var init_var
   36 type: . TINT
   37     | . TFLOAT
   38     | . TBOOL
   39     | . TSTRING
   40     | . TVOID
   42 func_decl: prototype '{' stmt_list . '}'
   43 prototype: . type var '(' fparam_list ')'
   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   58     | . '+' expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   74     | . '(' expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    error       shift, and go to state 42
    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    KWHILE      shift, and go to state 43
    KIF         shift, and go to state 44
    KPRINT      shift, and go to state 45
    KRETURN     shift, and go to state 46
    KBREAK      shift, and go to state 47
    KFOR        shift, and go to state 48
    KSWITCH     shift, and go to state 49
    KTRY        shift, and go to state 50
    KTHROW      shift, and go to state 51
    TINT        shift, and go to state 1
    TFLOAT      shift, and go to state 2
    TBOOL       shift, and go to state 3
    TSTRING     shift, and go to state 4
    TVOID       shift, and go to state 5
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    ';'         shift, and go to state 52
    '('         shift, and go to state 36
    '{'         shift, and go to state 53
    '}'         shift, and go to state 54

    stmt       go to state 55
    var_decl   go to state 56
    type       go to state 10
    prototype  go to state 57
    expr       go to state 58
    var        go to state 38
    call       go to state 39


state 26

   32 var_decl: var_decl ',' var init_var .

    $default  reduce using rule 32 (var_decl)


state 27

   50 expr: INTEGER .

    $default  reduce using rule 50 (expr)


state 28

   52 expr: BOOLEAN .

    $default  reduce using rule 52 (expr)


state 29

   51 expr: FLOAT .

    $default  reduce using rule 51 (expr)


state 30

   53 expr: STRING .

    $default  reduce using rule 53 (expr)


state 31

   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   58     | . '+' expr
   58     | '+' . expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   74     | . '(' expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    '('         shift, and go to state 36

    expr  go to state 59
    var   go to state 38
    call  go to state 39


state 32

   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   57     | '-' . expr
   58     | . '+' expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   74     | . '(' expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    '('         shift, and go to state 36

    expr  go to state 60
    var   go to state 38
    call  go to state 39


state 33

   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   58     | . '+' expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   73     | KNOT . expr
   74     | . '(' expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    '('         shift, and go to state 36

    expr  go to state 61
    var   go to state 38
    call  go to state 39


state 34

   77 expr: MM . var
   91 var: . IDENTIFIER

    IDENTIFIER  shift, and go to state 17

    var  go to state 62


state 35

   76 expr: PP . var
   91 var: . IDENTIFIER

    IDENTIFIER  shift, and go to state 17

    var  go to state 63


state 36

   50 expr: . INTEGER
   51     | . FLOAT
   52     | . BOOLEAN
   53     | . STRING
   54     | . var
   55     | . call
   56     | . var '=' expr
   57     | . '-' expr
   58     | . '+' expr
   59     | . expr '+' expr
   60     | . expr '-' expr
   61     | . expr '*' expr
   62     | . expr '/' expr
   63     | . expr '%' expr
   64     | . expr POW expr
   65     | . expr '<' expr
   66     | . expr '>' expr
   67     | . expr EQ expr
   68     | . expr GE expr
   69     | . expr LE expr
   70     | . expr NE expr
   71     | . expr KOR expr
   72     | . expr KAND expr
   73     | . KNOT expr
   74     | . '(' expr ')'
   74     | '(' . expr ')'
   75     | . expr '?' expr ':' expr
   76     | . PP var
   77     | . MM var
   78     | . var PP
   79     | . var MM
   80     | . expr PE expr
   81     | . expr ME expr
   82     | . expr MTE expr
   83     | . expr DE expr
   91 var: . IDENTIFIER
   92 call: . var '(' eparam_list ')'

    INTEGER     shift, and go to state 27
    BOOLEAN     shift, and go to state 28
    FLOAT       shift, and go to state 29
    STRING      shift, and go to state 30
    IDENTIFIER  shift, and go to state 17
    '+'         shift, and go to state 31
    '-'         shift, and go to state 32
    KNOT        shift, and go to state 33
    MM          shift, and go to state 34
    PP          shift, and go to state 35
    '('         shift, and go to state 36

    expr  go to state 64
    var   go to state 38
    call  go to state 39


state 37

   34 init_var: '=' expr .  [';', ',']
   59 expr: expr . '+' expr
   60     | expr . '-' expr
   61     | expr . '*' expr
   62     | expr . '/' expr
   63     | expr . '%' expr
   64     | expr . POW expr
   65     | expr . '<' expr
   66     | expr . '>' expr
   67     | expr . EQ expr
   68     | expr . GE expr
   69     | expr . LE expr
   70     | expr . NE expr
   71     | expr . KOR expr
   72     | expr . KAND expr
   75     | expr . '?' expr ':' expr
   80     | expr . PE expr
   81     | expr . ME expr
   82     | expr . MTE expr
   83     | expr . DE expr

    DE    shift, and go to state 65
    MTE   shift, and go to state 66
    ME    shift, and go to state 67
    PE    shift, and go to state 68
    '?'   shift, and go to state 69
    KOR   shift, and go to state 70
    KAND  shift, and go to state 71
    '>'   shift, and go to state 72
    '<'   shift, and go to state 73
    LE    shift, and go to state 74
    GE    shift, and go to state 75
    NE    shift, and go to state 76
    EQ    shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82
    POW   shift, and go to state 83

    $default  reduce using rule 34 (init_var)


state 38
